Restructure repos for parallel tool development

--- a/apps/web/src/pages/flows/[slug].astro
+++ b/apps/web/src/pages/flows/[slug].astro
@@ -1,6 +1,6 @@
 ---
-import FlowRunner from "../../ui/FlowRunner";
-import { flows } from "../../registry/flows";
+import FlowRunner from "../../ui/islands/FlowRunner";
+import { flows } from "../../registry/flows/generated/flows.generated";
 
 export function getStaticPaths() {
   return flows.map((flow) => ({
