--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import { tools } from "../registry/tools";
-import { flows } from "../registry/flows";
+import { tools } from "../registry/tools/generated/tools.generated";
+import { flows } from "../registry/flows/generated/flows.generated";
 ---
 <html lang="en">
   <head>
