--- a/apps/web/src/pages/flows/[slug].astro
+++ b/apps/web/src/pages/flows/[slug].astro
@@ -1,4 +1,5 @@
 ---
+import ServiceWorkerRegister from "../../ui/components/ServiceWorkerRegister.astro";
 import FlowRunner from "../../ui/islands/FlowRunner";
 import { flows } from "../../registry/flows/generated/flows.generated";
 
@@ -15,6 +16,7 @@ const { flow } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <title>{flow.title} | Tinykite Tools</title>
     <meta name="description" content={flow.seo.description} />
   </head>
@@ -25,5 +27,6 @@ const { flow } = Astro.props;
       <p>{flow.seo.summary}</p>
       <FlowRunner client:visible flow={flow} />
     </main>
+    <ServiceWorkerRegister />
   </body>
 </html>
