--- a/apps/web/src/pages/flows/[slug].astro
+++ b/apps/web/src/pages/flows/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import ServiceWorkerRegister from "../../ui/components/ServiceWorkerRegister.astro";
+import "../../ui/styles/global.css";
 import FlowRunner from "../../ui/islands/FlowRunner";
 import { flows } from "../../registry/flows/generated/flows.generated";
 
@@ -21,7 +22,7 @@ const { flow } = Astro.props;
     <meta name="description" content={flow.seo.description} />
   </head>
   <body>
-    <main>
+    <main class="page">
       <a href="/">Back</a>
       <h1>{flow.title}</h1>
       <p>{flow.seo.summary}</p>
