--- a/apps/web/src/pages/tools/[slug].astro
+++ b/apps/web/src/pages/tools/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import ServiceWorkerRegister from "../../ui/components/ServiceWorkerRegister.astro";
+import "../../ui/styles/global.css";
 import ToolRunner from "../../ui/islands/ToolRunner";
 import { tools } from "../../registry/tools/generated/tools.generated";
 
@@ -21,7 +22,7 @@ const { tool } = Astro.props;
     <meta name="description" content={tool.seo.description} />
   </head>
   <body>
-    <main>
+    <main class="page">
       <a href="/">Back</a>
       <h1>{tool.title}</h1>
       <p>{tool.seo.summary}</p>
